API init commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.DS_store
+.idea
+
 # Logs
 logs
 *.log
@@ -33,7 +36,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
