--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "start-prod": "NODE_ENV=production node app.js",
+    "start": "nodemon index.js",
+    "start-prod": "NODE_ENV=production node index.js",
     "lint-me": "eslint \"**/*.js\" --ignore-path .eslintignore --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
