--- a/api/package.json
+++ b/api/package.json
@@ -18,10 +18,14 @@
     "node": "10.5.0"
   },
   "dependencies": {
+    "agenda": "^2.0.0",
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.5",
+    "nodemailer": "^4.6.7",
     "winston": "^3.0.0"
   },
   "devDependencies": {
