--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "test": "ng test",
     "build": "ng build --prod",
     "e2e": "ng e2e",
