--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.4.1",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
@@ -25,11 +26,12 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.1",
     "angular-in-memory-web-api": "^0.6.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng-pick-datetime": "^6.0.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.24"
   },
