--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start --prefix api & npm start --prefix client"
+    "start": "npm start --prefix api & npm start --prefix client",
+    "postinstall": "cd api && npm i && cd ../client && npm i"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/vadomen/todo/issues"
   },
-  "homepage": "https://github.com/vadomen/todo#readme"
+  "homepage": "https://github.com/vadomen/todo#readme",
+  "devEngines": {
+    "node": "10.5.0",
+    "npm": "6.2.0"
+  },
+  "engines": {
+    "node": "10.5.0",
+    "npm": "6.2.0"
+  }
 }
