--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,8 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.5",
     "nodemailer": "^4.6.7",
-    "winston": "^3.0.0"
+    "winston": "^3.0.0",
+    "nodemon": "^1.18.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -34,7 +35,6 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "nodemon": "^1.18.3"
+    "eslint-plugin-react": "^7.10.0"
   }
 }
