--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,29 @@
   "description": "",
   "scripts": {
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "start": "ng serve --open",
+    "start": "node server.js",
     "test": "ng test",
     "build": "ng build --prod",
     "e2e": "ng e2e",
-    "ng": "ng"
+    "ng": "ng",
+    "postinstall": "ng build --aot -prod"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "devEngines": {
+    "node": "10.5.0"
+  },
+  "engines": {
+    "node": "10.5.0"
+  },
   "dependencies": {
     "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.4.1",
+    "@angular/cli": "^6.1.2",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.1.1",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
@@ -30,19 +39,23 @@
     "angular-in-memory-web-api": "^0.6.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "ng-pick-datetime": "^6.0.10",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
+    "typescript": "2.7.2",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
+    "@angular/cli": "^6.1.2",
+    "@angular/compiler-cli": "^6.1.1",
     "@angular/platform-server": "^6.0.0",
     "@types/jasmine": "~2.8.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.45",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
