--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "node": "10.5.0"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.4.1",
     "@angular/cli": "^6.1.2",
