--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
-  "name": "todo",
+  "name": "todo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon index.js",
+    "start-prod": "NODE_ENV=production node index.js",
+    "lint-me": "eslint \"**/*.js\" --ignore-path .eslintignore --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start --prefix api",
-    "postinstall": "cd api && npm i"
+    "prestart": "npm i"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vadomen/todo.git"
-  },
-  "author": "Vadim Pospelov",
+  "author": "Vadim pospelov",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vadomen/todo/issues"
+  "devEngines": {
+    "node": "10.5.0"
   },
-  "homepage": "https://github.com/vadomen/todo#readme"
+  "engines": {
+    "node": "10.5.0"
+  },
+  "dependencies": {
+    "agenda": "^2.0.0",
+    "body-parser": "^1.18.3",
+    "boom": "^7.2.0",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "mongoose": "^5.2.5",
+    "nodemailer": "^4.6.7",
+    "winston": "^3.0.0",
+    "nodemon": "^1.18.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0"
+  }
 }
