--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "ng build --prod",
     "e2e": "ng e2e",
     "ng": "ng",
-    "postinstall": "ng build --aot --prod",
-    "prestart": "npm i"
+    "postinstall": "ng build --aot --prod"
   },
   "keywords": [],
   "author": "",
