--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Todo",
+  "name": "todo",
   "version": "1.0.0",
   "private": true,
   "description": "",
   "scripts": {
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "start": "node server.js",
+    "start": "NODE_ENV=producrion node server.js",
     "test": "ng test",
     "build": "ng build --prod",
     "e2e": "ng e2e",
@@ -36,13 +36,12 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.1",
     "angular-in-memory-web-api": "^0.6.0",
-    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "ng-pick-datetime": "^6.0.10",
+    "ng-zorro-antd": "^1.7.0",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "typescript": "2.7.2",
