--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.7.1",
+    "@material-ui/icons": "^3.0.1",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^23.3.11",
     "@types/node": "^10.12.18",
